--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.1"
+  },
+  "dependencies": {
+    "axios": "^1.9.0"
   }
 }
